--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
 DB_CNN=mongodb+srv://easantose:Miperu1808@cluster0.7wzjb2o.mongodb.net/DBHospital
+JWT_SECRET=Holsdj28397kjHd7@asdyui3897k
